[package]
name = "iced_play"
version = "0.1.0"
authors = ["SchrodingerZhu <i@zhuyi.fan>"]
edition = "2018"
[profile.release]
lto = "fat"
opt-level = "z"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.1", features = ["image", "async-std"] }
wee_alloc = "*"
lyon_extra = "0.15.0"
rand = "*"
serde = { version = "*", features = ["derive"]}
serde_json = "*"